--- a/Agenda-B/appsettings.json
+++ b/Agenda-B/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Agenda": "server=(localdb)\\MSSQLLocalDB;database=Agenda;Trusted_Connection=true;"
+    "Agenda": "server=(localdb)\\MSSQLLocalDB;database=Agenda;Trusted_Connection=true;User ID=."
   }
 }
